--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,47 +1,51 @@
 /* Box model */
-p {
+/* p {
     margin: 0px;
-}
+} */
 
 .header {
+    display: flex;
+    align-items: center;
     min-height: 136px;
 }
 
+.menu {
+    display: flex;
+    align-items: center;
+}
+
+.header-el {
+    display: inline-block;
+}
+
 .logo-header {
-    margin-top: 20px;
-    margin-left: 256px;
+    margin-left: 13%;
+    margin-right: 12%;
 }
 
 #sell-apartment {
-    width: 249px;
-    margin-top: 54px;
-    margin-left: 235.26px;
+    width: 13vw;
 }
 
 #client-stories {
-    width: 200px;
-    margin-top: 54px;
-    margin-left: 35px;
+    width: 11vw;
+    margin-left: 1.82vw;
 }
 
 #phone-icon-header {
-    margin-top: 52px;
-    margin-left: 60px;
+    margin-left: 3.13vw;
     transform: rotate(6.22deg);
 }
 
 #header-tel {
-    width: 212px;
-    margin-top: 54px;
-    margin-left: 7.95px;
+    width: 11vw;
+    margin-left: 0.41vw;
 }
 
 .header .button {
-    width: 274px;
-    height: 56px;
-    margin-top: 40px;
-    margin-left: 16px;
-    padding: 12px 55px 15px;
+    width: 14.27vw;
+    min-height: 56px;
+    margin-left: 0.83vw;
     color: #121761;
 }
 
@@ -357,18 +361,6 @@ footer a:active {
 
 .link:visited {
     color: #A1303C;
-}
-
-@keyframes move {
-
-    from,
-    to {
-        margin-left: 16;
-    }
-
-    50% {
-        margin-left: 200px;
-    }
 }
 
 .header .button {
